[gd_scene load_steps=74 format=3 uid="uid://vn8ay56opuf"]

[ext_resource type="Texture2D" uid="uid://beks6fnb6rl84" path="res://assets/phone/phone_border.png" id="1_j61vq"]
[ext_resource type="Texture2D" uid="uid://bjkxa8hgkpa7k" path="res://assets/phone/back_02.png" id="2_okc1m"]
[ext_resource type="Script" path="res://scripts/raton_phone.gd" id="2_ol1mx"]
[ext_resource type="Texture2D" uid="uid://djfoh71fik2qq" path="res://assets/phone/but_01_call_norm.png" id="3_a0jf0"]
[ext_resource type="Texture2D" uid="uid://dfxw2x55wswng" path="res://assets/phone/notification.png" id="3_s867m"]
[ext_resource type="Script" path="res://scripts/mano_en_botones.gd" id="4_k73dl"]
[ext_resource type="Texture2D" uid="uid://bn8amj4hx2ol1" path="res://assets/phone/but_01_call_press.png" id="5_taa3r"]
[ext_resource type="Texture2D" uid="uid://27y00r4qj5q4" path="res://assets/phone/but_02_internet_norm.png" id="11_nq73h"]
[ext_resource type="Texture2D" uid="uid://7pbkvxxhv4f3" path="res://assets/phone/but_02_internet_press.png" id="12_3f461"]
[ext_resource type="Texture2D" uid="uid://c2werlcop1k7x" path="res://assets/phone/but_03_message_norm.png" id="13_1ouq8"]
[ext_resource type="Texture2D" uid="uid://btw71nod6xkbx" path="res://assets/phone/but_10_photos_norm.png" id="13_6ipwt"]
[ext_resource type="Texture2D" uid="uid://b7aa6xq8c7sek" path="res://assets/phone/but_03_message_press.png" id="14_hns2t"]
[ext_resource type="Texture2D" uid="uid://c4cq6goosmrir" path="res://assets/phone/but_10_photos_press.png" id="14_mgk7t"]
[ext_resource type="Texture2D" uid="uid://1darxjtws45r" path="res://assets/phone/but_04_music_norm.png" id="15_lol5f"]
[ext_resource type="FontFile" uid="uid://b2rl6owflbu8i" path="res://assets/fonts/runescape_uf.ttf" id="15_xxusd"]
[ext_resource type="Texture2D" uid="uid://3g74n6watdv" path="res://assets/phone/but_04_music_press.png" id="16_kupfh"]
[ext_resource type="Texture2D" uid="uid://dtmg7e500541" path="res://assets/phone/but_07_map_norm.png" id="16_y7teg"]
[ext_resource type="Texture2D" uid="uid://s42lsjfxahla" path="res://assets/phone/but_07_map_press.png" id="17_efyyj"]
[ext_resource type="Texture2D" uid="uid://qbl0nbnd3pwq" path="res://assets/phone/but_05_files_norm.png" id="17_mrrvu"]
[ext_resource type="Texture2D" uid="uid://h44w74yavdvu" path="res://assets/phone/but_08_notes_norm.png" id="18_p3tcy"]
[ext_resource type="Texture2D" uid="uid://xvnl76fwjatj" path="res://assets/phone/but_05_files_press.png" id="18_qrhqb"]
[ext_resource type="Texture2D" uid="uid://bu6e5rkpesmvg" path="res://assets/phone/but_08_notes_press.png" id="19_23brm"]
[ext_resource type="Texture2D" uid="uid://dlvdoy4v7urtk" path="res://assets/phone/but_06_ajustes_norm.png" id="19_eevwe"]
[ext_resource type="Texture2D" uid="uid://b0rq77lya7v41" path="res://assets/phone/but_06_ajustes_press.png" id="20_yenpe"]
[ext_resource type="PackedScene" uid="uid://bsfy47goajeds" path="res://scenes/phone_calls.tscn" id="21_5lrpb"]
[ext_resource type="Script" path="res://scripts/phone_calls.gd" id="21_rtfhe"]
[ext_resource type="Texture2D" uid="uid://df85wlhybl8q2" path="res://assets/phone/but_09_camera_norm.png" id="21_w57ve"]
[ext_resource type="PackedScene" uid="uid://vjcalqhdaqe4" path="res://scenes/maps.tscn" id="22_a2nnk"]
[ext_resource type="Texture2D" uid="uid://pnnab3s5pva1" path="res://assets/phone/but_09_camera_press.png" id="22_fdolo"]
[ext_resource type="Texture2D" uid="uid://vuik681tkgv3" path="res://assets/phone/back_off.png" id="22_ffulx"]
[ext_resource type="Script" path="res://scripts/maps.gd" id="23_puyw8"]
[ext_resource type="Script" path="res://scripts/c√°mara.gd" id="23_vdf0h"]
[ext_resource type="Script" path="res://scripts/pantalla_en_espera.gd" id="23_y063v"]
[ext_resource type="FontFile" uid="uid://cyoe0lu3ghnvg" path="res://assets/fonts/dogicapixelbold.ttf" id="24_2chle"]
[ext_resource type="Script" path="res://scripts/notepad.gd" id="25_02gv0"]
[ext_resource type="AudioStream" uid="uid://d3soippf3cy5d" path="res://assets/sounds/unlock.mp3" id="25_37ckp"]
[ext_resource type="PackedScene" uid="uid://bhrwnhblsxw2c" path="res://scenes/mensajes.tscn" id="25_n0cn1"]
[ext_resource type="Script" path="res://scripts/but_mensajes.gd" id="26_rkoko"]
[ext_resource type="Texture2D" uid="uid://iivoplynmol5" path="res://assets/phone/but_11_News_norm.png" id="27_3mrur"]
[ext_resource type="PackedScene" uid="uid://uipquy6s7naq" path="res://scenes/notepad.tscn" id="28_guerb"]
[ext_resource type="Texture2D" uid="uid://cikw6b3bmgrh0" path="res://assets/phone/but_11_News_press.png" id="28_mhl5y"]
[ext_resource type="Texture2D" uid="uid://dx0fth2rsqer7" path="res://assets/phone/but_12_Bank_norm.png" id="29_xmvop"]
[ext_resource type="Texture2D" uid="uid://cptb7ydcks35d" path="res://assets/phone/but_12_Bank_press.png" id="30_awbui"]
[ext_resource type="Script" path="res://scripts/phone/set_horas.gd" id="30_fonlb"]
[ext_resource type="Texture2D" uid="uid://dt5d0a2nelm7l" path="res://assets/phone/but_16_thingz_norm.png" id="31_5gbmj"]
[ext_resource type="Texture2D" uid="uid://bgfpluoko8ex8" path="res://assets/phone/but_13_story_norm.png" id="31_reioe"]
[ext_resource type="PackedScene" uid="uid://b53x8m2h6rlv4" path="res://scenes/files.tscn" id="32_a0de5"]
[ext_resource type="Texture2D" uid="uid://be7pd4jmu7s8k" path="res://assets/phone/but_16_thingz_press.png" id="32_g4hjr"]
[ext_resource type="Texture2D" uid="uid://c8stcsmn1566b" path="res://assets/phone/but_13_story_press.png" id="32_mfm8p"]
[ext_resource type="Texture2D" uid="uid://dp05vvp1jxe2" path="res://assets/phone/but_14_contact_norm.png" id="33_nlpya"]
[ext_resource type="Script" path="res://scripts/phone/fotos.gd" id="33_vvtej"]
[ext_resource type="Texture2D" uid="uid://dstkq3rtfcddw" path="res://assets/phone/but_14_contact_press.png" id="34_hakcl"]
[ext_resource type="Texture2D" uid="uid://dekiewc2y6m2s" path="res://assets/phone/but_17_bbdd_norm.png" id="38_m44as"]
[ext_resource type="PackedScene" uid="uid://cgscrc8il1sho" path="res://scenes/your_diary.tscn" id="39_doev2"]
[ext_resource type="Texture2D" uid="uid://ci7mjbo5qr4np" path="res://assets/phone/but_17_bbdd_hover.png" id="39_ldm65"]
[ext_resource type="Script" path="res://scripts/phone/your_diary.gd" id="40_ysfq0"]
[ext_resource type="Script" path="res://scripts/phone/news.gd" id="42_i5e7a"]
[ext_resource type="PackedScene" uid="uid://c604awremhbr7" path="res://scenes/bank.tscn" id="43_glvrw"]
[ext_resource type="Script" path="res://scripts/phone/bank.gd" id="44_q127i"]
[ext_resource type="PackedScene" uid="uid://b7nf8cme8rvsl" path="res://scenes/news.tscn" id="46_llolr"]
[ext_resource type="Script" path="res://scripts/phone/set_dia.gd" id="48_ign87"]
[ext_resource type="PackedScene" uid="uid://c07qpqkwkru4i" path="res://scenes/telefono.tscn" id="49_x5jqx"]
[ext_resource type="Script" path="res://scripts/phone/telefono.gd" id="50_dri5x"]
[ext_resource type="PackedScene" uid="uid://b8hu06gjd2ysq" path="res://scenes/to_dos_app.tscn" id="51_ol0jk"]
[ext_resource type="Script" path="res://scripts/phone/to_dos_app.gd" id="52_8cyry"]
[ext_resource type="Texture2D" uid="uid://o3njaqjw563f" path="res://assets/phone/print.png" id="53_avwt2"]
[ext_resource type="PackedScene" uid="uid://dhbfxgra5qbwk" path="res://scenes/appfiles.tscn" id="57_s3ycd"]
[ext_resource type="Script" path="res://scripts/phone/appfiles.gd" id="58_0v066"]
[ext_resource type="PackedScene" uid="uid://f3lj58xe5g12" path="res://scenes/police_db.tscn" id="62_ymwwk"]
[ext_resource type="Script" path="res://scripts/phone/police_db_listado_de_apps.gd" id="63_fcphb"]

[sub_resource type="Animation" id="Animation_iow3e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("face_id/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face_id/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l188m"]
resource_name = "face_id"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("face_id/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face_id/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdj0m"]
_data = {
"RESET": SubResource("Animation_iow3e"),
"face_id": SubResource("Animation_l188m")
}

[node name="Phone" type="Node2D"]
position = Vector2(470, 40)

[node name="PhoneBorder" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(74, 146)
texture = ExtResource("1_j61vq")
script = ExtResource("2_ol1mx")

[node name="notif_back" type="Sprite2D" parent="PhoneBorder"]
visible = false
z_index = -9
position = Vector2(-5, -74)
texture = ExtResource("3_s867m")

[node name="num_notif" type="Label" parent="PhoneBorder/notif_back"]
offset_left = -3.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 3.0
scale = Vector2(0.898804, 1.07298)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "1"

[node name="Control" type="Control" parent="PhoneBorder"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = -84.0
offset_top = -157.0
offset_right = 95.0
offset_bottom = 155.0

[node name="Back02" type="Sprite2D" parent="."]
position = Vector2(74, 146)
texture = ExtResource("2_okc1m")

[node name="Botones" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_k73dl")

[node name="Bot√≥n de Llamada" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 9.0
offset_top = 243.0
offset_right = 40.0
offset_bottom = 271.0
focus_mode = 0
texture_normal = ExtResource("3_a0jf0")
texture_pressed = ExtResource("5_taa3r")
stretch_mode = 3

[node name="Bot√≥n de Internet" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 41.0
offset_top = 243.0
offset_right = 72.0
offset_bottom = 271.0
focus_mode = 0
texture_normal = ExtResource("11_nq73h")
texture_pressed = ExtResource("12_3f461")
stretch_mode = 3

[node name="Bot√≥n de Mensajes" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 73.0
offset_top = 243.0
offset_right = 104.0
offset_bottom = 271.0
focus_mode = 0
texture_normal = ExtResource("13_1ouq8")
texture_pressed = ExtResource("14_hns2t")
stretch_mode = 3

[node name="Bot√≥n de m√∫sica" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 105.0
offset_top = 243.0
offset_right = 136.0
offset_bottom = 271.0
focus_mode = 0
texture_normal = ExtResource("15_lol5f")
texture_pressed = ExtResource("16_kupfh")
stretch_mode = 3

[node name="Bot√≥n de Fotos" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 10.0
offset_top = 29.0
offset_right = 39.0
offset_bottom = 57.0
focus_mode = 0
texture_normal = ExtResource("13_6ipwt")
texture_pressed = ExtResource("14_mgk7t")

[node name="Label" type="Label" parent="Botones/Bot√≥n de Fotos"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Photos"
horizontal_alignment = 1

[node name="Bot√≥n de Ajustes" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 42.0
offset_top = 29.0
offset_right = 71.0
offset_bottom = 57.0
focus_mode = 0
texture_normal = ExtResource("19_eevwe")
texture_pressed = ExtResource("20_yenpe")

[node name="Label2" type="Label" parent="Botones/Bot√≥n de Ajustes"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Settings"
horizontal_alignment = 1

[node name="Bot√≥n de Mapa" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 74.0
offset_top = 29.0
offset_right = 103.0
offset_bottom = 57.0
focus_mode = 0
texture_normal = ExtResource("16_y7teg")
texture_pressed = ExtResource("17_efyyj")

[node name="Label3" type="Label" parent="Botones/Bot√≥n de Mapa"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Map"
horizontal_alignment = 1

[node name="Bot√≥n de Notas" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 106.0
offset_top = 29.0
offset_right = 135.0
offset_bottom = 57.0
focus_mode = 0
texture_normal = ExtResource("18_p3tcy")
texture_pressed = ExtResource("19_23brm")

[node name="Label4" type="Label" parent="Botones/Bot√≥n de Notas"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Notes"
horizontal_alignment = 1

[node name="Bot√≥n de C√°mara" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 10.0
offset_top = 69.0
offset_right = 39.0
offset_bottom = 97.0
focus_mode = 0
texture_normal = ExtResource("21_w57ve")
texture_pressed = ExtResource("22_fdolo")
script = ExtResource("23_vdf0h")

[node name="Label2" type="Label" parent="Botones/Bot√≥n de C√°mara"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Camera"
horizontal_alignment = 1

[node name="Bot√≥n de Files" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 43.0
offset_top = 69.0
offset_right = 72.0
offset_bottom = 97.0
focus_mode = 0
texture_normal = ExtResource("17_mrrvu")
texture_pressed = ExtResource("18_qrhqb")

[node name="Label3" type="Label" parent="Botones/Bot√≥n de Files"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Files"
horizontal_alignment = 1

[node name="Bot√≥n de News" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 75.0
offset_top = 69.0
offset_right = 104.0
offset_bottom = 97.0
texture_normal = ExtResource("27_3mrur")
texture_pressed = ExtResource("28_mhl5y")

[node name="Label4" type="Label" parent="Botones/Bot√≥n de News"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "News"
horizontal_alignment = 1

[node name="Bot√≥n de Bank" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 107.0
offset_top = 69.0
offset_right = 136.0
offset_bottom = 97.0
texture_normal = ExtResource("29_xmvop")
texture_pressed = ExtResource("30_awbui")

[node name="Label5" type="Label" parent="Botones/Bot√≥n de Bank"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Bank"
horizontal_alignment = 1

[node name="Bot√≥n de Thingz" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 10.0
offset_top = 109.0
offset_right = 39.0
offset_bottom = 137.0
texture_normal = ExtResource("31_5gbmj")
texture_pressed = ExtResource("32_g4hjr")

[node name="Label3" type="Label" parent="Botones/Bot√≥n de Thingz"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Timez!"
horizontal_alignment = 1

[node name="Bot√≥n de Contactos" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 43.0
offset_top = 109.0
offset_right = 72.0
offset_bottom = 137.0
texture_normal = ExtResource("33_nlpya")
texture_pressed = ExtResource("34_hakcl")

[node name="Label4" type="Label" parent="Botones/Bot√≥n de Contactos"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Contacts"
horizontal_alignment = 1

[node name="Bot√≥n de Story" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 75.0
offset_top = 109.0
offset_right = 104.0
offset_bottom = 137.0
texture_normal = ExtResource("31_reioe")
texture_pressed = ExtResource("32_mfm8p")

[node name="Label5" type="Label" parent="Botones/Bot√≥n de Story"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Your diary"
horizontal_alignment = 1

[node name="Boton de DB" type="TextureButton" parent="Botones"]
layout_mode = 0
offset_left = 107.0
offset_top = 109.0
offset_right = 136.0
offset_bottom = 137.0
texture_normal = ExtResource("38_m44as")
texture_pressed = ExtResource("39_ldm65")
texture_hover = ExtResource("38_m44as")

[node name="Label6" type="Label" parent="Botones/Boton de DB"]
layout_mode = 0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 0.760784)
theme_override_fonts/font = ExtResource("15_xxusd")
theme_override_font_sizes/font_size = 8
text = "Police DB"
horizontal_alignment = 1

[node name="ToDos_App" parent="." instance=ExtResource("51_ol0jk")]
visible = false
z_index = -1
position = Vector2(-1, -1)
script = ExtResource("52_8cyry")

[node name="Your Diary" parent="." instance=ExtResource("39_doev2")]
visible = false
z_index = -1
position = Vector2(1, 0)
script = ExtResource("40_ysfq0")

[node name="Llamadas" parent="." instance=ExtResource("21_5lrpb")]
visible = false
z_index = -1
position = Vector2(0, 0)
script = ExtResource("21_rtfhe")

[node name="Maps" parent="." instance=ExtResource("22_a2nnk")]
visible = false
z_index = -1
script = ExtResource("23_puyw8")

[node name="Notepad" parent="." instance=ExtResource("28_guerb")]
visible = false
z_index = -1
script = ExtResource("25_02gv0")

[node name="Mensajes" parent="." instance=ExtResource("25_n0cn1")]
visible = false
position = Vector2(-1, -1)
script = ExtResource("26_rkoko")

[node name="Fotos" parent="." instance=ExtResource("32_a0de5")]
visible = false
script = ExtResource("33_vvtej")

[node name="News" parent="." instance=ExtResource("46_llolr")]
visible = false
position = Vector2(-3, 4)
script = ExtResource("42_i5e7a")

[node name="Bank" parent="." instance=ExtResource("43_glvrw")]
visible = false
position = Vector2(-1, 0)
script = ExtResource("44_q127i")

[node name="Telefono" parent="." instance=ExtResource("49_x5jqx")]
visible = false
z_index = -1
position = Vector2(-1, 0)
script = ExtResource("50_dri5x")

[node name="Files" parent="." instance=ExtResource("57_s3ycd")]
visible = false
z_index = -1
position = Vector2(0, -1)
script = ExtResource("58_0v066")

[node name="police_DB" parent="." instance=ExtResource("62_ymwwk")]
visible = false
z_index = -1
position = Vector2(0, -1)
script = ExtResource("63_fcphb")

[node name="Espera2" type="Sprite2D" parent="."]
visible = false
z_index = 8
position = Vector2(73, 146)
texture = ExtResource("22_ffulx")
script = ExtResource("23_y063v")

[node name="Horas" type="RichTextLabel" parent="Espera2"]
offset_left = -67.0
offset_top = -71.0
offset_right = 65.0
offset_bottom = -42.0
theme_override_fonts/normal_font = ExtResource("24_2chle")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "hora"
text_direction = 1
script = ExtResource("30_fonlb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Espera2"]
stream = ExtResource("25_37ckp")
volume_db = 4.0

[node name="D√≠a" type="RichTextLabel" parent="Espera2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -240.5
offset_right = -8.0
offset_bottom = -231.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "d√≠a"
autowrap_mode = 2
shortcut_keys_enabled = false
script = ExtResource("48_ign87")

[node name="face_id" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tdj0m")
}

[node name="Sprite2D" type="Sprite2D" parent="face_id"]
visible = false
z_index = 5
position = Vector2(544, 186)
texture = ExtResource("53_avwt2")

[connection signal="mouse_entered" from="PhoneBorder/Control" to="PhoneBorder" method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="PhoneBorder/Control" to="PhoneBorder" method="_on_control_mouse_exited"]
[connection signal="button_up" from="Botones/Bot√≥n de Llamada" to="Telefono" method="_on_bot√≥n_de_llamada_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Llamada" to="Botones" method="_on_bot√≥n_de_llamada_mouse_entered"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Internet" to="Botones" method="_on_bot√≥n_de_internet_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Mensajes" to="Mensajes" method="_on_bot√≥n_de_mensajes_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Mensajes" to="Botones" method="_on_bot√≥n_de_mensajes_mouse_entered"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de m√∫sica" to="Botones" method="_on_bot√≥n_de_m√∫sica_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Fotos" to="Fotos" method="_on_bot√≥n_de_files_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Fotos" to="Botones" method="_on_bot√≥n_de_files_mouse_entered"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Ajustes" to="Botones" method="_on_bot√≥n_de_ajustes_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Mapa" to="Maps" method="_on_bot√≥n_de_mapa_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Mapa" to="Botones" method="_on_bot√≥n_de_mapa_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Notas" to="Notepad" method="_on_bot√≥n_de_notas_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Notas" to="Botones" method="_on_bot√≥n_de_notas_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de C√°mara" to="Botones/Bot√≥n de C√°mara" method="_on_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de C√°mara" to="Botones" method="_on_bot√≥n_de_c√°mara_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Files" to="Files" method="_on_bot√≥n_de_files_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Files" to="Botones" method="_on_bot√≥n_de_files_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de News" to="News" method="_on_bot√≥n_de_news_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de News" to="Botones" method="_on_bot√≥n_de_news_mouse_entered"]
[connection signal="button_down" from="Botones/Bot√≥n de Bank" to="Bank" method="_on_bot√≥n_de_bank_button_down"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Bank" to="Botones" method="_on_bot√≥n_de_bank_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Thingz" to="ToDos_App" method="_on_bot√≥n_de_story_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Thingz" to="Botones" method="_on_bot√≥n_de_story_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Contactos" to="Llamadas" method="_on_bot√≥n_de_contactos_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Contactos" to="Botones" method="_on_bot√≥n_de_contactos_mouse_entered"]
[connection signal="button_up" from="Botones/Bot√≥n de Story" to="Your Diary" method="_on_bot√≥n_de_story_button_up"]
[connection signal="mouse_entered" from="Botones/Bot√≥n de Story" to="Botones" method="_on_bot√≥n_de_story_mouse_entered"]
[connection signal="button_up" from="Botones/Boton de DB" to="police_DB" method="_on_boton_de_db_button_up"]
[connection signal="mouse_entered" from="Botones/Boton de DB" to="Botones" method="_on_boton_de_db_mouse_entered"]
