extends Control

# Funcion para mostrar la mano en los botones del ratón

func _on_botón_de_llamada_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_internet_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_mensajes_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_música_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_files_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_ajustes_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_mapa_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_notas_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_cámara_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_news_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)

func _on_botón_de_bank_mouse_entered() -> void:
	Input.set_custom_mouse_cursor(Global.mano)
